--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures{
-        dataBinding true
+        viewBinding true
     }
 }
 
@@ -48,11 +48,16 @@ dependencies {
 
     // country code picker
     implementation 'com.hbb20:ccp:2.5.0'
+
     // pin view
     implementation 'io.github.chaosleung:pinview:1.4.4'
+
     // firebase
     implementation platform('com.google.firebase:firebase-bom:31.0.1')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth'
 
-
+    // coroutine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
 }
