--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ui.signup.OTPActivity"
+            android:name=".ui.signup.OTP.OTPActivity"
             android:exported="false">
 
             <meta-data
