--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     // coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    //
+    implementation 'androidx.browser:browser:1.4.0'
 }
